# pybind_cuda_mnist

./: CMakeLists.txt  README.md  main.py  model_epoch_20_W2.npy  run_cuda_main.bat  test.py  train.py
output/models/: model_epoch_10_W1.npy  model_epoch_10_W2.npy  model_epoch_20_W1.npy
src/: header.cuh  loss.cu  matmul.cu  optimizer.cu  relu.cu  softmax.cu  two_layers_mlp.cu  vector_add.cu  wrapper.cpp
